# seafile-server

./: .gitignore  CMakeLists.txt  Dockerfile  NOTICE.txt  config.cmake.h  configure.ac  test.dockerfile
.github/workflows/: ci.yml  publish-docker.yml
ci/: .gitignore  create_config.sh  docker-compose.pgsql.yml  docker-compose.yml  requirements.txt  run.py  run_tests.sh  serverctl.py
ci/config/: ccnet.conf  seafile.conf
ci/db/: pgsql.sql
ci/template/: ccnet.mysql.conf  ccnet.pgsql.conf  fileserver.c.conf  fileserver.go.conf  seafile.mysql.conf  seafile.pgsql.conf
common/: Makefile.am  block-backend-fs.c  block-backend.c  block-backend.h  block-mgr.c  block-mgr.h  block-tx-utils.c  block-tx-utils.h  block.h  branch-mgr.c  branch-mgr.h  commit-mgr.c  commit-mgr.h  common.h  config-mgr.c  config-mgr.h  diff-simple.c  diff-simple.h  fs-mgr.c  fs-mgr.h  group-mgr.c  group-mgr.h  log.c  log.h  merge-new.c  merge-new.h  mq-mgr.c  mq-mgr.h  mysql-bool.h  obj-backend-fs.c  obj-backend-riak.c  obj-backend.h  obj-cache.c  obj-cache.h  obj-store.c  obj-store.h  object-list.c  object-list.h  org-mgr.c  password-hash.c  (+18 more)
common/cdc/: CMakeLists.txt  cdc.c  cdc.h  rabin-checksum.h
common/processors/: objecttx-common.h
controller/: CMakeLists.txt  seafile-controller.c  seafile-controller.h
fileserver/: fileop.go
fileserver/option/: option.go
fileserver/repomgr/: repomgr.go
fuse/: CMakeLists.txt  Makefile.am  file.c  getattr.c  readdir.c  repo-mgr.c  repo-mgr.h  seaf-fuse.c  seaf-fuse.h  seafile-session.c  seafile-session.h
include/: seafile-error.h  seafile-rpc.h
lib/: CMakeLists.txt  bloom-filter.c  branch.vala  ccnetobj.vala  commit.vala  copy-task.vala  crypt.vala  db.c  db.h  dir.vala  dirent.vala  file.vala  job-mgr.c  job-mgr.h  libseafile.cmake.pc  net.c  net.h  repo.vala  seahub.vala  search-result.vala  task.vala  timer.c  timer.h  utils.c  utils.h  webaccess.vala
notification-server/: server.go
python/: .env  .gitignore  CMakeLists.txt  pyproject.toml
python/seafile/: CMakeLists.txt
python/seaserv/: CMakeLists.txt
python/tests/: conftest.py
python/tests/test_file_operation/: test_file_operation.py  test_merge_virtual_repo.py  test_search_files.py  test_upload_and_update.py  test_upload_large_files.py  test_zip_download.py
python/tests/test_file_property_and_dir_listing/: test_file_property_and_dir_listing.py
python/tests/test_gc/: test_gc.py
python/tests/test_upload/: go.mod  go.sum  test_upload.go
scripts/: CMakeLists.txt
server/: CMakeLists.txt  Makefile.am  access-file.c  access-file.h  change-set.c  change-set.h  copy-mgr.c  copy-mgr.h  fileserver-config.h  http-server.c  http-server.h  http-status-codes.h  http-tx-mgr.c  http-tx-mgr.h  index-blocks-mgr.c  index-blocks-mgr.h  metric-mgr.c  metric-mgr.h  notif-mgr.c  notif-mgr.h  pack-dir.c  pack-dir.h  passwd-mgr.c  passwd-mgr.h  permission-mgr.c  permission-mgr.h  quota-mgr.c  quota-mgr.h  repo-mgr.c  repo-mgr.h  repo-op.c  repo-perm.c  seaf-server.c  seafile-session.c  seafile-session.h  share-mgr.c  share-mgr.h  size-sched.c  size-sched.h  upload-file.c  (+6 more)
server/gc/: CMakeLists.txt  Makefile.am  fsck.c  fsck.h  gc-core.c  gc-core.h  repo-mgr.c  repo-mgr.h  seaf-fsck.c  seafile-session.c  seafile-session.h  seafserv-gc.c  verify.c  verify.h
tools/: CMakeLists.txt
