[project]
name = "tests"
version = "0.1.0"
description = "tests"
requires-python = ">=3.13"
dependencies = [
    "termcolor>=1.1.0",
    "requests>=2.8.0",
    "pytest>=3.3.2",
    "backports.functools_lru_cache>=1.4",
    "tenacity>=4.8.0",
    "future",
    "requests-toolbelt",
    "pysearpc",
    "python-dotenv>=1.2.2",
    "libseaserv"
]

[tool.uv.sources]
pysearpc = { git = "https://github.com/justjanne/libsearpc.git" }
libseaserv = { git = "https://github.com/justjanne/libseaserv.git" }
